--- a/index.html
+++ b/index.html
@@ -513,9 +513,39 @@ Oct.2014
                         </div>
                         <div class="clearfix"></div>
                     </div>
+
                         <p style="margin-left: 200px; margin-bottom:
-                        6px"> <font size="4">Coming soon.</font>
-                          </p>
+                        6px"> <font size="4">I'm a big fan of martial arts since
+                        I as a little kid, and I was really
+                        into <a href="http://en.wikipedia.org/wiki/Wuxia">Wuxia</a>
+                        novels, and deeply affected by Kung Fu movies (mainly
+                        acted by Bruce Lee, Jet Li, and Jacky Chen). I finally
+                        got a chance to learn Kung Fu in the year 1999 with my
+                        first master. Since then, I read a lot of materials
+                        about martial arts, and practice them in the real
+                        fight. I started to learn
+                        <a href="http://en.wikipedia.org/wiki/Jeet_Kune_Do">Jeet
+                        Kune Do</a> around
+                        2002, <a href="http://en.wikipedia.org/wiki/T'ai_chi_ch'uan">
+                        Tai chi</a> in 2003,
+                        <a href="http://en.wikipedia.org/wiki/Sanshou">Sanshou</a>
+                        in
+                        2005, <a href="http://v.youku.com/v_show/id_XMjAyNDA5Mjcy.html?from=y1.2-1-98.3.6-1.1-1-1-5">Tian
+                        Gang Mian Zhang</a> in
+                        2006, <a href="http://en.wikipedia.org/wiki/Xing_Yi_Quan#Five_Element_Shapes_.28W.C7.94_X.C3.ADng_.E4.BA.94.E5.BD.A2.29">The
+                        Five Elements of Xing Yi Quan</a> in
+                        2007, <a href="http://en.wikipedia.org/wiki/Muay_Thai">
+                        Muay Thai</a> in
+                        2007, <a href="http://en.wikipedia.org/wiki/Fanzi">Fanzi
+                        quan</a>, <a>Chin Na</a> (joint lock techniques)
+                        and <a href="http://en.wikipedia.org/wiki/Mongolian_wrestling">Mongolian
+                        wrestling</a> in 2009. I became a Kung Fu coach and an
+                        assistant Sanshou coach in 2008, and I got a part time
+                        for teaching stand up technique in
+                        a <a href="http://en.wikipedia.org/wiki/Mixed_martial_arts">Mixed
+                        martial arts</a> (MMA) school in Australia in 2010, and
+                        founded Endless Martial Arts Association in 2011.</font>
+                        </p>
                 </div>
             </div>
         </div>
@@ -804,7 +834,7 @@ Oct.2014
                         <br>
                         <span style="padding-left:30px"> <a href="images/email/email2.png"><img style="width:
                         130px; height: 30px"
-                        src=images/email/email2.png></a>(Persional account)</span>
+                        src=images/email/email2.png></a>(Personal account)</span>
                         <br>
                         <span style="padding-left:165px"><a href="doc/email2.asc">
                         PGP Key</a></span>
