--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ Oct.2014
                           Yu. <a href="doc/Slides/Slide-3F.pdf"> 'A Generic
                           Framework for Three-Factor
                           Authentication'</a>. [CompSecSem] Security Seminar,
-                          Schoole of Computer Science, University of Birmingham,
+                          School of Computer Science, University of Birmingham,
                           March, 2013, Birmingham.</li>
                           <br>
                           <li>Jiangshan Yu. <a href="doc/Slides/DTKI.pdf">
@@ -391,7 +391,7 @@ Oct.2014
                           <br>
                           <li>Jiangshan Yu. <a href="doc/Slides/KUD_Slides.pdf">
                           'Key Usage Detection</a>. [CompSecSem] Security
-                          Seminar, Schoole of Computer Science, University of
+                          Seminar, School of Computer Science, University of
                           Birmingham, Oct., 2014, Birmingham.</li>
 <!--                          (<a href='doc/slides/kud.txt'>Abstract</a>)
 -->
