--- a/index.html
+++ b/index.html
@@ -537,7 +537,8 @@ Oct.2014
                         2007, <a href="http://en.wikipedia.org/wiki/Muay_Thai">
                         Muay Thai</a> in
                         2007, <a href="http://en.wikipedia.org/wiki/Fanzi">Fanzi
-                        quan</a>, <a>Chin Na</a> (joint lock techniques)
+                        quan</a>, <a href="http://en.wikipedia.org/wiki/Chin_Na">Chin
+                        Na</a> (joint lock techniques)
                         and <a href="http://en.wikipedia.org/wiki/Mongolian_wrestling">Mongolian
                         wrestling</a> in 2009. I became a Kung Fu coach and an
                         assistant Sanshou coach in 2008, and I got a part time
