--- a/index.html
+++ b/index.html
@@ -581,9 +581,121 @@ Oct.2014
                         </div>
                         <div class="clearfix"></div>
                     </div>
-                        <p style="margin-left: 200px; margin-bottom:
-                        6px"> <font size="4">Coming soon.</font>
-                          </p>
+
+                              <font size="4">
+                              <p style="margin-left: 200px; margin-bottom:
+                                        6px"> <font size="4">I'm in charge of or
+                                        involved in the following
+                                        projects. Please contact me for more
+                                        detail. </p>
+
+                    <p style="margin-left: 200px; margin-bottom:
+                        6px"> <b>Tech-Project</b></p>
+	                  <ul type="square"; style="margin-left: 200px; margin-bottom:
+                              6px">
+	                    <li><p><b>ECT/ConfiMail</b></p> 
+                        <p>Enhanced certificate transparency (ECT) is a new
+                         public key infrastructure, it enables efficient
+                         certificate issuance and revocation management, and can
+                         detect misbehaviours from certificate authorities which
+                         is required to be trusted in the current PKI. It can be
+                         applied to all systems where public key cryptography is
+                         used.</p>
+                        <p>One of interesting applications of ECT is an
+                         easy-to-use and end-to-end encrypted email system,
+                         called "ConfiMail".  Public-key cryptography was
+                         invented to allow users to send encrypted mail;
+                         nevertheless, 35 years later, in practice it is rather
+                         hard for users to encrypt their mail in a systematic
+                         way. S/MIME and PGP exist but have failed to take off,
+                         for reasons that have been published in the paper "Why
+                         Johnny can’t encrypt" and become
+                         well-understood. Numerous efforts to improve this
+                         situation have been made, but none of them
+                         simultaneously satisfy the requirements of usability
+                         (users should not be required to understand anything
+                         about keys, or to take any special actions) and
+                         security (encryption should be end-to-end, and there
+                         should be no trusted parties).  ConfiMail solves the
+                         two core problems – it allows users to send encrypted
+                         mail without having to understand anything about keys
+                         or certificates, and without having to rely on any
+                         trusted parties.</p>
+                        </li>
+                      <br>
+                      <li><p><b>Key Usage Detection (KUD)</b></p> 
+                        <p>The key usage detection (KUD) system enables key
+                        owners to monitor the usage of their cryptographic
+                        decryption keys or signing keys, thus can detect the
+                        unauthorised usage of secret keys. This is the first
+                        known system that makes unauthorised usage of long-term
+                        secret keys for decryption to be detectable. It can be
+                        applied to all communication systems where encryption is
+                        required.</p>
+                        <p> If a communication system (e.g. email system, online
+                        financing system, cloud services, and other sensitive
+                        data exchanging systems) was having security flaw
+                        (e.g. having malware installed or having security bugs
+                        like Heartbleed and ShellShock), or hacked by some
+                        attackers, it is possible that the secret key of the
+                        system is exposed to the attacker. In this case, the
+                        security of the system is broken until the secret key
+                        has expired or revoked. However, according to the
+                        current state of the art, there is no way for the key
+                        owner to know if the key is compromised. So, the secret
+                        key owner is not prompted to revoke the comprised secret
+                        key or take other actions. Hence, the security that the
+                        system guarantees is broken until the secret key has
+                        expired. However even when a key is expired, the new key
+                        may also become compromised. This product solves this
+                        problem by letting the key owner be able to detect the
+                        fact of a compromised secret key.  In addition, in
+                        systems where a key escrew authority exists, this
+                        product can detect if the secret key is abused.</p>
+                        </li>
+                      <br>
+                      <br>
+                      </ul>
+
+                     <p style="margin-left: 200px; margin-bottom: 6px"> <b>Trust
+                        and Investment</b></p>
+                      <p style="margin-left: 200px; margin-bottom:
+                        6px"><a href="http://www.jinxdai.com">Jin Xin Tong Trust
+                        and Investment Corporation Ltd</a> is a Chinese
+                        financing and investment company, currently interested
+                        in helping individual to found a company and helping
+                        SMEs to make their business successful. If you or your
+                        company has an idea which can be transferred to products
+                        that has a big market in China, then we can help you to
+                        found and/or accelerate your company by providing
+                        variety of supports such as fund support, management
+                        support, and marketing support.</p>
+
+
+                    <p style="margin-left: 200px; margin-bottom: 6px"> <b>Plant,
+                        Land and Mine</b></p> <p> <i>Dong Jing Ling Cement
+                        Plant</i> was built in 1986 in Liao Ning, China. The
+                        structure of flow-sheet and equipment of the production
+                        process is fall behind. It currently looking for
+                        technologies and potential cooperation opportunities
+                        that could be used for an industrial revolution to
+                        reduce the pollution and protect the environment. The
+                        plant has the following resources, and is willing to
+                        change even its main product (cement) to any other
+                        possible environment friendly products. It has
+                        hydroelectric power for industrial purpose and
+                        convenient transportation to railway, sea port, and air
+                        port.</p>
+
+                   <ul type="square"; style="margin-left: 200px; margin-bottom:
+                              6px">
+                      <p>Location: Liao Ning, China.</p>
+                      <p>Area: 50,000 m<sup>2</sup></p>
+                      <p>Gross leasable area (GLA): 6670 m<sup>2</sup>.</p>  
+                      <p>limestone: 90,000,000 m<sup>3</sup> (approximately 2.4
+                      billion tonne)
+
+                  </font>
                 </div>
             </div>
         </div>
