--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@ Oct.2014
                                         involved in the following
                                         projects. Please contact me for more
                                         detail. </p>
-
+                              <br>
                     <p style="margin-left: 200px; margin-bottom:
                         6px"> <b>Tech-Project</b></p>
 	                  <ul type="square"; style="margin-left: 200px; margin-bottom:
@@ -622,7 +622,7 @@ Oct.2014
                          or certificates, and without having to rely on any
                          trusted parties.</p>
                         </li>
-                      <br>
+
                       <li><p><b>Key Usage Detection (KUD)</b></p> 
                         <p>The key usage detection (KUD) system enables key
                         owners to monitor the usage of their cryptographic
@@ -654,7 +654,6 @@ Oct.2014
                         product can detect if the secret key is abused.</p>
                         </li>
                       <br>
-                      <br>
                       </ul>
 
                      <p style="margin-left: 200px; margin-bottom: 6px"> <b>Trust
@@ -670,31 +669,32 @@ Oct.2014
                         found and/or accelerate your company by providing
                         variety of supports such as fund support, management
                         support, and marketing support.</p>
-
+                    <br>
 
                     <p style="margin-left: 200px; margin-bottom: 6px"> <b>Plant,
-                        Land and Mine</b></p> <p> <i>Dong Jing Ling Cement
-                        Plant</i> was built in 1986 in Liao Ning, China. The
-                        structure of flow-sheet and equipment of the production
-                        process is fall behind. It currently looking for
-                        technologies and potential cooperation opportunities
-                        that could be used for an industrial revolution to
-                        reduce the pollution and protect the environment. The
-                        plant has the following resources, and is willing to
-                        change even its main product (cement) to any other
-                        possible environment friendly products. It has
+                        Land and Mine</b></p> 
+                    <p style="margin-left: 200px; margin-bottom: 6px"> <i>Dong
+                        Jing Ling Cement Plant</i> was built in 1986 in Liao
+                        Ning, China. The structure of flow-sheet and equipment
+                        of the production process is fall behind. It currently
+                        looking for technologies and potential cooperation
+                        opportunities that could be used for an industrial
+                        revolution to reduce the pollution and protect the
+                        environment. The plant has the following resources, and
+                        is willing to change even its main product (cement) to
+                        any other possible environment friendly products. It has
                         hydroelectric power for industrial purpose and
                         convenient transportation to railway, sea port, and air
                         port.</p>
 
                    <ul type="square"; style="margin-left: 200px; margin-bottom:
                               6px">
-                      <p>Location: Liao Ning, China.</p>
-                      <p>Area: 50,000 m<sup>2</sup></p>
-                      <p>Gross leasable area (GLA): 6670 m<sup>2</sup>.</p>  
-                      <p>limestone: 90,000,000 m<sup>3</sup> (approximately 2.4
-                      billion tonne)
-
+                      <li>Location: Liao Ning, China.</li>
+                      <li>Area: 50,000 m<sup>2</sup></li>
+                      <li>Gross leasable area (GLA): 6670 m<sup>2</sup>.</li>  
+                      <li>limestone: 90,000,000 m<sup>3</sup> (approximately 2.4
+                      billion tonne)</li>
+                   </ul>
                   </font>
                 </div>
             </div>
