--- a/index.html
+++ b/index.html
@@ -516,14 +516,14 @@ Oct.2014
 
                         <p style="margin-left: 200px; margin-bottom:
                         6px"> <font size="4">I'm a big fan of martial arts since
-                        I as a little kid, and I was really
+                        I was a little kid, and I was really
                         into <a href="http://en.wikipedia.org/wiki/Wuxia">Wuxia</a>
-                        novels, and deeply affected by Kung Fu movies (mainly
+                        novels, and deeply influenced by Kung Fu movies (mainly
                         acted by Bruce Lee, Jet Li, and Jacky Chen). I finally
                         got a chance to learn Kung Fu in the year 1999 with my
                         first master. Since then, I read a lot of materials
-                        about martial arts, and practice them in the real
-                        fight. I started to learn
+                        about martial arts, and practice them in real fights. I
+                        started to learn
                         <a href="http://en.wikipedia.org/wiki/Jeet_Kune_Do">Jeet
                         Kune Do</a> around
                         2002, <a href="http://en.wikipedia.org/wiki/T'ai_chi_ch'uan">
@@ -542,7 +542,7 @@ Oct.2014
                         and <a href="http://en.wikipedia.org/wiki/Mongolian_wrestling">Mongolian
                         wrestling</a> in 2009. I became a Kung Fu coach and an
                         assistant Sanshou coach in 2008, and I got a part time
-                        for teaching stand up technique in
+                        job for teaching stand up technique in
                         a <a href="http://en.wikipedia.org/wiki/Mixed_martial_arts">Mixed
                         martial arts</a> (MMA) school in Australia in 2010, and
                         founded Endless Martial Arts Association in 2011.</font>
@@ -584,10 +584,9 @@ Oct.2014
 
                               <font size="4">
                               <p style="margin-left: 200px; margin-bottom:
-                                        6px"> <font size="4">I'm in charge of or
-                                        involved in the following
-                                        projects. Please contact me for more
-                                        detail. </p>
+                                        6px"> <font size="4">I'm involved in the
+                                        following projects. Please contact me
+                                        for more detail. </p>
                               <br>
                     <p style="margin-left: 200px; margin-bottom:
                         6px"> <b>Tech-Project</b></p>
@@ -601,26 +600,25 @@ Oct.2014
                          is required to be trusted in the current PKI. It can be
                          applied to all systems where public key cryptography is
                          used.</p>
-                        <p>One of interesting applications of ECT is an
-                         easy-to-use and end-to-end encrypted email system,
-                         called "ConfiMail".  Public-key cryptography was
-                         invented to allow users to send encrypted mail;
-                         nevertheless, 35 years later, in practice it is rather
-                         hard for users to encrypt their mail in a systematic
-                         way. S/MIME and PGP exist but have failed to take off,
-                         for reasons that have been published in the paper "Why
-                         Johnny can’t encrypt" and become
-                         well-understood. Numerous efforts to improve this
-                         situation have been made, but none of them
-                         simultaneously satisfy the requirements of usability
-                         (users should not be required to understand anything
-                         about keys, or to take any special actions) and
-                         security (encryption should be end-to-end, and there
-                         should be no trusted parties).  ConfiMail solves the
-                         two core problems – it allows users to send encrypted
-                         mail without having to understand anything about keys
-                         or certificates, and without having to rely on any
-                         trusted parties.</p>
+                        <p>One interesting application of ECT is an easy-to-use
+                         and end-to-end encrypted email system, called
+                         "ConfiMail".  Public-key cryptography was invented to
+                         allow users to send encrypted mail; nevertheless, 35
+                         years later, in practice it is rather hard for users to
+                         encrypt their mail in a systematic way. S/MIME and PGP
+                         exist but have failed to take off, for reasons that
+                         have been published in the paper "Why Johnny can’t
+                         encrypt" and become well-understood. Numerous efforts
+                         to improve this situation have been made, but none of
+                         them simultaneously satisfy the requirements of
+                         usability (users should not be required to understand
+                         anything about keys, or to take any special actions)
+                         and security (encryption should be end-to-end, and
+                         there should be no trusted parties).  ConfiMail solves
+                         the two core problems – it allows users to send
+                         encrypted mail without having to understand anything
+                         about keys or certificates, and without having to rely
+                         on any trusted parties.</p>
                         </li>
 
                       <li><p><b>Key Usage Detection (KUD)</b></p> 
@@ -633,8 +631,8 @@ Oct.2014
                         applied to all communication systems where encryption is
                         required.</p>
                         <p> If a communication system (e.g. email system, online
-                        financing system, cloud services, and other sensitive
-                        data exchanging systems) was having security flaw
+                        finance system, cloud services, and other sensitive data
+                        exchanging systems) was having security flaws
                         (e.g. having malware installed or having security bugs
                         like Heartbleed and ShellShock), or hacked by some
                         attackers, it is possible that the secret key of the
@@ -662,13 +660,13 @@ Oct.2014
                         6px"><a href="http://www.jinxdai.com">Jin Xin Tong Trust
                         and Investment Corporation Ltd</a> is a Chinese
                         financing and investment company, currently interested
-                        in helping individual to found a company and helping
-                        SMEs to make their business successful. If you or your
-                        company has an idea which can be transferred to products
-                        that has a big market in China, then we can help you to
-                        found and/or accelerate your company by providing
-                        variety of supports such as fund support, management
-                        support, and marketing support.</p>
+                        in helping individual found a company and helping SMEs
+                        make their business successful. If you or your company
+                        has an idea which can be transferred to products that
+                        has a big market in China, then we can help you found
+                        and/or accelerate your company by providing variety of
+                        supports such as fund support, management support, and
+                        marketing support.</p>
                     <br>
 
                     <p style="margin-left: 200px; margin-bottom: 6px"> <b>Plant,
@@ -676,13 +674,13 @@ Oct.2014
                     <p style="margin-left: 200px; margin-bottom: 6px"> <i>Dong
                         Jing Ling Cement Plant</i> was built in 1986 in Liao
                         Ning, China. The structure of flow-sheet and equipment
-                        of the production process is fall behind. It currently
+                        of the production process has been falling behind. It is
                         looking for technologies and potential cooperation
                         opportunities that could be used for an industrial
                         revolution to reduce the pollution and protect the
                         environment. The plant has the following resources, and
-                        is willing to change even its main product (cement) to
-                        any other possible environment friendly products. It has
+                        could make change of its main product (cement) to any
+                        other possible environment friendly products. It has
                         hydroelectric power for industrial purpose and
                         convenient transportation to railway, sea port, and air
                         port.</p>
