--- a/web/resume.html
+++ b/web/resume.html
@@ -53,7 +53,7 @@
 						</div>
 						<div class="yui-u">
 							<p class="enlarge">
-                I'm currently a Ph.D researcher in the Schoold of Computer
+                I'm currently a Ph.D researcher in the School of Computer
                 Science, University of Birmingham, U.K. My research interests
                 are in security and privacy.
 							</p>
@@ -135,7 +135,7 @@
                 <p> <span style="padding-left:50px"><font size='3'>Secure authentication of users and/or servers;</span>
                 <br> <span style="padding-left:50px">Secure communication between parties;</span>
                 <br> <span style="padding-left:50px">Ability of anti-hacking;</span>
-                <br> <span style="padding-left:50px">Secure data transmission; and</span>
+                <br> <span style="padding-left:50px">Secure data transmission;</span>
                 <br> <span style="padding-left:50px">Secure data storage.</span></font></p>
 						</div><!--// .yui-u -->
 					</div><!--// .yui-gf -->
