--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ Oct.2014
 -->
 <html lang="en">
     <head>
-        <title>Jiangshan</title>
-        <meta name="keywords" content="" />
-		<meta name="description" content="" />
+        <title>Jiangshan</title> <meta name="keywords" content="Jiangshan Yu,
+        information security, privacy, 于江山, 信息安全" />
+        <meta name="description" content="" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="images/yu.png">
