--- a/index.html
+++ b/index.html
@@ -518,11 +518,12 @@ Oct.2014
                         6px"> <font size="4">I'm a big fan of martial arts since
                         I was a little kid, and I was really
                         into <a href="http://en.wikipedia.org/wiki/Wuxia">Wuxia</a>
-                        novels, and deeply influenced by Kung Fu movies (mainly
-                        acted by Bruce Lee, Jet Li, and Jacky Chen). I finally
-                        got a chance to learn Kung Fu in the year 1999 with my
-                        first master. Since then, I read a lot of materials
-                        about martial arts, and practice them in real fights. I
+                        novels and Kung Fu movies (mainly acted by Bruce Lee,
+                        Jet Li, and Jacky Chen). They are (good) influences that
+                        cannot be ignored in my childhood. I finally got a
+                        chance to learn Kung Fu in the year 1999 with my first
+                        master. Since then, I read a lot of materials about
+                        martial arts, and practice them in real fights. I
                         started to learn
                         <a href="http://en.wikipedia.org/wiki/Jeet_Kune_Do">Jeet
                         Kune Do</a> around
@@ -624,7 +625,7 @@ Oct.2014
                       <li><p><b>Key Usage Detection (KUD)</b></p> 
                         <p>The key usage detection (KUD) system enables key
                         owners to monitor the usage of their cryptographic
-                        decryption keys or signing keys, thus can detect the
+                        decryption keys or signing keys, thus it can detect the
                         unauthorised usage of secret keys. This is the first
                         known system that makes unauthorised usage of long-term
                         secret keys for decryption to be detectable. It can be
@@ -664,7 +665,7 @@ Oct.2014
                         make their business successful. If you or your company
                         has an idea which can be transferred to products that
                         has a big market in China, then we can help you found
-                        and/or accelerate your company by providing variety of
+                        and/or accelerate your company by providing a variety of
                         supports such as fund support, management support, and
                         marketing support.</p>
                     <br>
@@ -674,16 +675,16 @@ Oct.2014
                     <p style="margin-left: 200px; margin-bottom: 6px"> <i>Dong
                         Jing Ling Cement Plant</i> was built in 1986 in Liao
                         Ning, China. The structure of flow-sheet and equipment
-                        of the production process has been falling behind. It is
-                        looking for technologies and potential cooperation
+                        of the production process have been falling behind. It
+                        is looking for technologies and potential cooperation
                         opportunities that could be used for an industrial
-                        revolution to reduce the pollution and protect the
+                        revolution to reduce the pollution and to protect the
                         environment. The plant has the following resources, and
                         could make change of its main product (cement) to any
-                        other possible environment friendly products. It has
+                        other possible environmental friendly products. It has
                         hydroelectric power for industrial purpose and
-                        convenient transportation to railway, sea port, and air
-                        port.</p>
+                        convenient transportation to railway, sea port, and
+                        airport.</p>
 
                    <ul type="square"; style="margin-left: 200px; margin-bottom:
                               6px">
