--- a/index.html
+++ b/index.html
@@ -723,7 +723,8 @@ Oct.2014
                     <div class="templatemo-gallery-category" style="font-size:16px; margin-top:8px;">
                         <div class="text-center">
                             <a class="active" href=".gallery">All</a>
-                            / <a href=".ME">Me</a>/ <a href=".AU">Friends</a>
+                            / <a href=".CN">China</a>
+                            / <a href=".AU">Australia</a> 
                             / <a href=".UK">UK</a>
                             / <a href=".MA">Martial arts</a>
                         </div>
@@ -734,21 +735,61 @@ Oct.2014
                 <div class="text-center">
                     <ul class="templatemo-project-gallery" >
 
-                      <li class="col-lg-2 col-md-2 col-sm-2  ME" >
-                            <a class="colorbox" href="images/my/deer_a.JPG" data-group="ME">
+                      <li class="col-lg-2 col-md-2 col-sm-2 gallery CN" >
+                            <a class="colorbox" href="images/my/deer_a.JPG" data-group="CN">
                                 <div class="templatemo-project-box">
-                                    <img src="images/my/deer_b.JPG" class="img-responsive" alt="ME" />
+                                    <img src="images/my/deer_b.JPG" class="img-responsive" alt="CN" />
                                     <div class="project-overlay">
                                         <h5>Me</h5>
                                         <hr />
-                                        <h4>Harbin</h4>
+                                        <h4>China</h4>
                                     </div>
                                 </div>
                             </a>
                         </li>
 
 
-                      <li class="col-lg-2 col-md-2 col-sm-2  MA" >
+                      <li class="col-lg-2 col-md-2 col-sm-2 gallery UK" >
+                            <a class="colorbox" href="images/my/DSC_4303_a.JPG" data-group="UK">
+                                <div class="templatemo-project-box">
+                                    <img src="images/my/DSC_4303_b.JPG" class="img-responsive" alt="UK" />
+                                    <div class="project-overlay">
+                                        <h5>Me</h5>
+                                        <hr />
+                                        <h4>UK</h4>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+
+                      <li class="col-lg-2 col-md-2 col-sm-2 gallery AU" >
+                            <a class="colorbox" href="images/my/DSC05881_a.JPG" data-group="AU">
+                                <div class="templatemo-project-box">
+                                    <img src="images/my/DSC05881_b.JPG" class="img-responsive" alt="AU" />
+                                    <div class="project-overlay">
+                                        <h5>Me</h5>
+                                        <hr />
+                                        <h4>AU</h4>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+
+
+                      <li class="col-lg-2 col-md-2 col-sm-2 gallery UK" >
+                            <a class="colorbox" href="images/my/DSCN8011_a.JPG" data-group="UK">
+                                <div class="templatemo-project-box">
+                                    <img src="images/my/DSCN8011_b.JPG" class="img-responsive" alt="UK" />
+                                    <div class="project-overlay">
+                                        <h5>Me</h5>
+                                        <hr />
+                                        <h4>UK</h4>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+
+                      <li class="col-lg-2 col-md-2 col-sm-2 gallery MA" >
                             <a class="colorbox" href="images/wu/wu_1a.JPG" data-group="MA">
                                 <div class="templatemo-project-box">
                                     <img src="images/wu/wu_1b.JPG" class="img-responsive" alt="MA" />
@@ -760,7 +801,8 @@ Oct.2014
                                 </div>
                             </a>
                         </li>
-                        <li class="col-lg-2 col-md-2 col-sm-2  MA-design" >
+
+                        <li class="col-lg-2 col-md-2 col-sm-2 gallery MA" >
                             <a class="colorbox" href="images/wu/wu_3a.jpg" data-group="MA">
                                 <div class="templatemo-project-box">
                                     <img src="images/wu/wu_3b.jpg" class="img-responsive" alt="MA" />
@@ -773,7 +815,7 @@ Oct.2014
                             </a>
                         </li>
 
-                        <li class="col-lg-2 col-md-2 col-sm-2  MA" >
+                        <li class="col-lg-2 col-md-2 col-sm-2 gallery MA" >
                             <a class="colorbox" href="images/wu/wu_2a.JPG" data-group="MA">
                                 <div class="templatemo-project-box">
                                     <img src="images/wu/wu_2b.JPG" class="img-responsive" alt="MA" />
