--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@ Oct.2014
                               <p style="margin-left: 200px; margin-bottom:
                                         6px"> <font size="4">I'm involved in the
                                         following projects. Please contact me
-                                        for more detail. </p>
+                                        for more details. </p>
                               <br>
                     <p style="margin-left: 200px; margin-bottom:
                         6px"> <b>Tech-Project</b></p>
