--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ Oct.2014
                 <div class="templatemo-slogan text-center">
                     <span class="txt_darkgrey"> </span><span class="txt_orange">Jiangshan Yu</span>
                     <p class="txt_slogan"><br><i><font size="5">PhD researcher
-                          working on information security in the University of
+                          working on information security at the University of
                           Birmingham, UK. <br> </font></i></p>
                 </div>	
             </div>
